--- a/first.html
+++ b/first.html
@@ -56,7 +56,7 @@
               <div id="map-container" style="height: 300px;"></div>
                 <script>
                 function initMap() {
-                    var myLocation = {lat: 53.0027, lng: 2.1794};
+                    var myLocation = {lat: 53.0103798, lng: -2.1801833};
                     var map = new google.maps.Map(document.getElementById('map-container'), {
                     zoom: 2,
                     center: myLocation
@@ -68,7 +68,7 @@
                 }
                 </script>
                 <script async defer
-                src="https://maps.googleapis.com/maps/api/js?key=YOURKEY&callback=initMap">
+                src="https://maps.googleapis.com/maps/api/js?key=577a4a09fd2a424eadf445c39bdab3c2&callback=initMap">
                 </script>
 
               <p>
