--- a/first.html
+++ b/first.html
@@ -91,6 +91,7 @@
       </main>
     </div>
        <script src="material.js"></script>
+       <script src="scripts.js"></script> 
       
   </body>
 </html>
